src/objects/BMCServiceDesk__Scanner__c.object
<CustomObject>
    <description>To store scanner device information.</description>
    <fields>
        <fullName>BMCServiceDesk__DeviceIPAddress__c</fullName>
        <description>To store IP address of the scanner device.</description>
        <label>Device IP Address</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DeviceId__c</fullName>
        <description>To store Id of the scanner device.</description>
        <label>Device Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DeviceLocation__c</fullName>
        <description>To store location of the scanner device.</description>
        <label>Device Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DeviceName__c</fullName>
        <description>To store name of the scanner device.</description>
        <label>Device Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DeviceOperatingSystem__c</fullName>
        <description>To store the Operating System of the scanner device.</description>
        <label>Device Operating System</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MarkAsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the scanner device is deleted or not.</description>
        <label>Mark As Deleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Scanner</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scanners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>